--- a/src/components/AdminSidePanel/AdminSidePanel.css
+++ b/src/components/AdminSidePanel/AdminSidePanel.css
@@ -2,7 +2,7 @@
 .side-panel {
     width: 250px;
     height: 100%;
-    background-color: #c4cac6;
+    background-color: rgb(240, 240, 240);;
     color: #0f0f0f;
     padding: 20px;
     display: flex;
