--- a/src/components/AddComplaint/AddComplaint.css
+++ b/src/components/AddComplaint/AddComplaint.css
@@ -468,3 +468,20 @@
     width: 100%;
   }
 }
+.jantadarbar-banner {
+  background-color: #fff8e1;
+  border-left: 5px solid #ffa000;
+  padding: 15px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+}
+
+.jantadarbar-banner h2 {
+  margin: 0;
+  color: #e65100;
+}
+
+.jantadarbar-banner p {
+  margin: 5px 0 0;
+  color: #5d4037;
+}
